RESOLVED FIXED315774
Ensure exception is not thrown when MediaSession.setActionHandler is called
https://bugs.webkit.org/show_bug.cgi?id=315774
Summary Ensure exception is not thrown when MediaSession.setActionHandler is called
Joshua Hernandez
Reported 2026-05-28 11:17:56 PDT
Ensure exception is not thrown when MediaSession.setActionHandler is called
Attachments
Radar WebKit Bug Importer
Comment 1 2026-05-28 11:18:04 PDT
Joshua Hernandez
Comment 2 2026-05-28 11:27:18 PDT
EWS
Comment 3 2026-06-04 07:21:58 PDT
Committed 314546@main (7503ebe002c0): <https://commits.webkit.org/314546@main> Reviewed commits have been landed. Closing PR #65896 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.